--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="../index.html">Home</a></li>
        		<li><a href="speakers.html">Speakers</a></li>
        		<li><a href="luncheons.html">Luncheons</a></li>
-       		<li><a href="tickets.html">Tickets</a></li>
+       		<li><a href="ticket.html">Tickets</a></li>
             <li><a href="aboutus.html"> About Us</a>
                 <ul>
                		<li><a href="#">Our History</a></li>
